k8s/base/web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
  namespace: ${APP_NAMESPACE}
spec:
  selector:
    app.kubernetes.io/name: ${APP_NAME}
  ports:
  - name: http
    port: 80
    targetPort: http
  type: ClusterIP
